--- a/03-Python/02-Flujos de control/02-Practica/Ejercicios Flujos de Control_enunciados.ipynb
+++ b/03-Python/02-Flujos de control/02-Practica/Ejercicios Flujos de Control_enunciados.ipynb
@@ -28,7 +28,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "notas_clase = [4,5,7,3,4,6,5,5,4,5,6,7,8,7,6,4,6,5,5,4,5,6]"
+    "\n",
+    "mi_nota_de_examen = 9.5\n",
+    "\n",
+    "if mi_nota_de_examen < 0 and mi_nota_de_examen > 10:\n",
+    "    print(\"Nota erronea\")\n",
+    "\n",
+    "if mi_nota_de_examen < 5 :\n",
+    "    print(\"A septiembre :(\")\n",
+    "\n",
+    "elif mi_nota_de_examen < 6 :\n",
+    "    print(\"Suficiente\")\n",
+    "    \n",
+    "elif mi_nota_de_examen < 7 :\n",
+    "    print(\"Bien\")\n",
+    "    \n",
+    "elif mi_nota_de_examen < 9 :\n",
+    "    print(\"Notable\")\n",
+    "    \n",
+    "else:\n",
+    "    print(\"Sobresaliente\")"
    ]
   },
   {
@@ -37,7 +56,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Celda para introducir tu respuesta"
+    "notas_clase = [4,5,7,3,4,6,5,5,4,5,6,7,8,7,6,4,6,5,5,4,5,6]\n",
+    "\n",
+    "for notas in notas_clase:\n",
+    "    if notas < 0 and notas > 10:\n",
+    "        print(notas,\"-\",\"Nota erronea\")\n",
+    "    elif notas < 5 :\n",
+    "        print(\"A septiembre\", \":\", notas)\n",
+    "    elif notas < 6 :\n",
+    "        print(notas, \"-\",\"Suficiente\")\n",
+    "    elif notas < 7 :\n",
+    "        print(notas, \"-\",\"Bien\")\n",
+    "    elif notas < 9 :\n",
+    "        print(notas, \"-\",\"Notable\")\n",
+    "    else:\n",
+    "        print(notas, \"-\",\"Sobresaliente\")"
    ]
   },
   {
@@ -87,10 +120,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transporte o Error\n"
+     ]
+    }
+   ],
+   "source": [
+    "def como_estoy(hora):\n",
+    "\n",
+    "    if hora > 0 and hora <= 8:\n",
+    "        print(\"Durmiendo\")\n",
+    "    elif hora >= 9 and hora <= 18:\n",
+    "        print(\"Trabajando\")\n",
+    "    elif hora >= 19 and hora <= 21:\n",
+    "        print(\"Clase\")\n",
+    "    elif hora >= 22 and hora <= 24:\n",
+    "        print(\"Descanso\")\n",
+    "    else:\n",
+    "        print(\"Transporte o Error\")\n",
+    "    return\n",
+    "\n",
+    "como_estoy(-3)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,6 +173,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def cal_precios(distrito,s):\n",
+    "    if distrito == (\"Moncloa\" or \"Centro\") and s >= 100:\n",
+    "        print(\"Esta vivienda vale 1.000 euros\")\n",
+    "    elif distrito == \"Salamanca\" and s >= 150:\n",
+    "        print(\"Esta vivienda vale 1.500 euros\")\n",
+    "    elif distrito != \"Retiro\" and (60 <= s <= 80):\n",
+    "        print(\"Esta vivienda vale 600 euros\")\n",
+    "    else:\n",
+    "        print(\"Esta vivienda vale 0 euros\")\n",
+    "\n",
+    "cal_precios(\"Moncloa\", 50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
@@ -136,7 +210,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def cal_precios_bis(distrito,s):\n",
+    "    if distrito == \"Retiro\":\n",
+    "        print(\"Retiro\")\n",
+    "        if s >= 100:\n",
+    "            print(\"Esta vivienda vale 1.000 euros\")\n",
+    "        else:\n",
+    "            print(\"Esta vivienda vale 500 euros\")   \n",
+    "    else:\n",
+    "        print(\"Otro distrito\")\n",
+    "\n",
+    "cal_precios_bis(\"Retiro\", 50)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -148,10 +234,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "6\n",
+      "9\n",
+      "12\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista=[1, 2, 3, 4, 5]\n",
+    "numero = 3\n",
+    "for multiplo in lista:\n",
+    "    lista2 = multiplo*numero\n",
+    "    print (lista2)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -166,7 +271,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "var1 = range(-10,0)\n",
+    "for var2 in var1:\n",
+    "    print(var2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,7 +294,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "list1 = [12, 15, 32, 42, 55, 75, 122, 132, 150, 180, 200]\n",
+    "\n",
+    "for divisible in list1:\n",
+    "    if divisible % 5 == 0:\n",
+    "        print(divisible)\n",
+    "     "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -200,6 +316,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "x = range(150,350)\n",
+    "for y in range(150,350):\n",
+    "    if y % 5 == 0 and y % 7 == 0:\n",
+    "        print(y)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
@@ -230,6 +356,21 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "while x in range(x,0,-1):\n",
+    "    if x==5:\n",
+    "        print(i)\n",
+    "    else:\n",
+    "        x = x - 1\n",
+    "        print(i)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -242,6 +383,86 @@
     "4. Si acertamos, salimos del bucle e imprimimos por pantalla \"You win\". Y si perdemos también salimos del bucle, pero en este caso imprimimos por pantalla \"You lose\".\n",
     "\n",
     "TIP: te puede resultar útil usar la sentencia `else` cuando acabe el bucle `while`. Lo que haya dentro de ese `else` se ejecutará una vez acabe la ejecución del `while`. Lo podrás usar para cuando pierdas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "2\n",
+      "Te queda 0 vida\n",
+      "You lose\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "vidas = 1\n",
+    "\n",
+    "z = str(random.randint(1,5))\n",
+    "#print(z)\n",
+    "\n",
+    "input1 = input(\"Adivina un numero del 1 al 5\")\n",
+    "print(input1)\n",
+    "\n",
+    "while vidas > 0:\n",
+    "        if z == input1:\n",
+    "            print(\"You win\")\n",
+    "            break\n",
+    "        else:\n",
+    "            vidas = vidas - 1\n",
+    "            print(\"Te queda\", vidas, \"vida\")\n",
+    "            input2 = input(\"Intentalo de nuevo\")\n",
+    "            if z == input2:\n",
+    "                 print(\"You win\")\n",
+    "            else:\n",
+    "                 print(\"You lose\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "Prueba de nuevo\n",
+      "5\n",
+      "Prueba de nuevo\n",
+      "You lose\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "vidas2 = 2\n",
+    "\n",
+    "zz = str(random.randint(1,5))\n",
+    "#print(z)\n",
+    "\n",
+    "while vidas2 > 0:\n",
+    "    input2 = input(\"Adivina un numero del 1 al 5\")\n",
+    "    print(input2)\n",
+    "    if zz == input2:\n",
+    "        print(\"You win\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"Prueba de nuevo\")\n",
+    "        vidas2 = vidas2 - 1\n",
+    "        if vidas2 == 0:\n",
+    "            print(\"You lose\")\n",
+    "    "
    ]
   },
   {
@@ -268,7 +489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
