--- a/Ejercicios_más_alla_ramp_up/ejercicios_II.ipynb
+++ b/Ejercicios_más_alla_ramp_up/ejercicios_II.ipynb
@@ -49,21 +49,68 @@
     "print(list_pares)\n",
     "# Pero esto escala muy mal: si tengo una lista con 873 números lo repito 873 veces? Pues para eso están los bucles (y otras cosas)! \n",
     "# ¡Básicamente necesitamos que la computadora realice operaciones que siguen un mismo patrón (multiplicar por 2, sumar 17, compromar una condición) con todos los datos de una lista... \n",
-    "# ... es decir en bucle!\n"
+    "# ... es decir en bucle!\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "8\n",
+      "12\n",
+      "16\n",
+      "20\n",
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_pares = [2,4,6,8,10,12]\n",
+    "for num in list_pares:\n",
+    "    print(num*2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# Condiciones\n",
     "# Guarda en la variable cond_or la condición si alguna de estas dos variables: postre o café, es cierta\n",
     "# Genera en la variable cond_and la condición si ambas variables son ciertas: postre y café\n",
+    "postre = False\n",
+    "cafe = False\n",
     "\n",
-    "postre = True\n",
-    "cafe = True\n",
+    "cond_or = postre or cafe\n",
+    "print(cond_or)\n",
+    "cond_and = postre and cafe\n",
+    "print(cond_and)\n",
+    "cond_not = not cond_and\n",
+    "print(cond_not)\n",
+    "#xor = cond_or and cond_not\n",
+    "xor = (postre or cafe) and (not (postre and cafe)) \n",
+    "print(xor)\n",
     "\n",
     "# Condiciones (NECESITAS LA PARTE ANTERIOR)\n",
     "# Guarda en la variable cond_not que sea la negación de cond_and\n",
@@ -78,15 +125,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# XOR ¿simplificado? \n",
     "# ¿Puedo aprovechar que python entiende True como 1 y False como 0?\n",
     "# Ejecuta, piensa, hazlo en un papel, prueba todas las posibilidades\n",
-    "postre = True\n",
-    "cafe = True\n",
+    "postre = False\n",
+    "cafe = False\n",
     "cond_and = postre + cafe\n",
     "xor = (cond_and == 1)\n",
     "print(xor)"
@@ -99,8 +154,10 @@
    "outputs": [],
    "source": [
     "# La regla del 70\n",
-    "# La regla del 70 se utiliza para calcular cuantos años se tardaría, aproximadamente, en doblar una inversión, PIB... si crece a un porcentaje constante\n",
-    "# Si tus ahorros crecen al 2%, necesitas 70/2 = 35 años para doblar tus ahorros (formula: ahorros_doble = ahorros*(1.02)**35, ahorros_doble sería aprox. el doble que ahorros)\n",
+    "# La regla del 70 se utiliza para calcular cuantos años se tardaría, aproximadamente,\n",
+    "# en doblar una inversión, PIB... si crece a un porcentaje constante\n",
+    "# Si tus ahorros crecen al 2%, necesitas 70/2 = 35 años para doblar tus ahorros\n",
+    "# (formula: ahorros_doble = ahorros*(1.02)**35, ahorros_doble sería aprox. el doble que ahorros)\n",
     "# Si crecen al 4% en 17.5 años ya tienes el doble!\n",
     "# Comprueba esta regla y estudia si es muy exacta!\n",
     "\n"
@@ -108,9 +165,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "['Gabriela', 'Jonatan']\n"
+     ]
+    }
+   ],
    "source": [
     "# Si quiero importar mi propio código:\n",
     "# Observa el contenido de constantes.py\n",
@@ -121,9 +187,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Helena'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Añade a constantes.py la variable nombre con tu nombre y prueba a imprimirlo desde aquí:\n",
     "# ACUERDATE DE GUARDAR TODO Y CERRAR Y ABRIR:\n",
@@ -132,6 +209,13 @@
     "import constantes\n",
     "constantes.nombre"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -150,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
