--- a/Ejercicios_más_alla_ramp_up/ejercicios_sabado_10.ipynb
+++ b/Ejercicios_más_alla_ramp_up/ejercicios_sabado_10.ipynb
@@ -28,6 +28,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "deuda_total = 20000\n",
+    "ingresos = 3000\n",
+    "gastos = 3750\n",
+    "\n",
+    "deuda_mens = abs(ingresos - gastos)\n",
+    "\n",
+    "deuda_sept = deuda_mens*8\n",
+    "meses_año = 12\n",
+    "deuda_2028 = deuda_total + (deuda_mens*meses_año*4)\n",
+    "\n",
+    "print(deuda_2028)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# El pleno del Ayuntamiento quiere venderla en su totalidad, es decir, el comprador asume la deuda acumulada.\n",
     "# En septiembre de 2024, Remates SL decide hacer una generosa oferta y pagar al Ayuntamiento 1 euro por la compañia municipal de recogida de residuos.\n",
     "# ¿Ha hecho Remates SL un buen negocio? \n",
@@ -38,9 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hola\n",
+      "Adios\n",
+      "****************************************************************************************************\n",
+      "5.0\n"
+     ]
+    }
+   ],
    "source": [
     "# FUNCIONA: pensamos la lógica interna de que esto funcione\n",
     "lista = [print, \"hola\"]\n",
@@ -48,14 +78,30 @@
     "lista[0]('Adios')\n",
     "# Pide al usuario que introduzca 1 si quiere hacer la raiz cuadrada de un número y 2 si quiere hacer el valor absoluto. \n",
     "# Pida al usuario que introduzca el número del que quiere hacer la raíz cuadrada o el valor absoluto\n",
-    "# Utiliza una lista de funciones para resolver "
+    "# Utiliza una lista de funciones para resolver \n",
+    "print('*'*100)\n",
+    "input1 = int(input(\"Introduzca 1 para calcular la raiz cuadrada y 2 para calcular el valor absoluto\"))\n",
+    "input2 = int(input(\"Introduzca el numero que desea operar\"))    \n",
+    "from math import sqrt\n",
+    "lista1 = [print, sqrt, abs]\n",
+    "resultado = lista1[input1](input2)\n",
+    "lista[0](resultado)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2650\n",
+      "2650\n"
+     ]
+    }
+   ],
    "source": [
     "# Otra forma de ver IF más compacta, menos legible\n",
     "base = 1000\n",
@@ -81,16 +127,29 @@
     "# PRO: más compacto \n",
     "# CONTRA: menos legible\n",
     "# CONTRA: menos eficiente ?????\n",
-    "salario = base + (mes == 6)*extra + (mes ==12)*(extra + bonus)\n",
+    "salario = base + (mes == 6)*extra + (mes == 12)*(extra + bonus)\n",
     "print(salario)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Antes de cambios\n",
+      "STAR WARS\n",
+      "STAR WARS\n",
+      "Después de cambios\n",
+      "STAEIOuR WAEIOuRS\n",
+      "STAR WARS\n"
+     ]
+    }
+   ],
    "source": [
     "# La acción a distancia: ¿si cambio una variable, cambia su \"copia\"?\n",
     "# NO\n",
@@ -103,14 +162,27 @@
     "print('Después de cambios')\n",
     "peli = peli.replace(\"A\", \"AEIOu\")\n",
     "print(peli)\n",
-    "print(peli_copia)"
+    "print(peli_copia)\n",
+    "\n",
+    "#porque peli_copia = peli solo se ejecuta arriba entonces no actualiza la variable peli_copia"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Antes de cambios\n",
+      "[4, 5, 7, 8, 6]\n",
+      "[4, 5, 7, 8, 6]\n",
+      "[4, 5, 7, 8, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "# La acción a distancia: ¿si cambio una variable, cambia su \"copia\"?\n",
     "# Bueno, SÍ\n",
@@ -126,9 +198,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Después de cambios\n",
+      "['STRANGER THINGS', 5, 7, 8, 6]\n",
+      "['STRANGER THINGS', 5, 7, 8, 6]\n",
+      "[4, 5, 7, 8, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "print('Después de cambios')\n",
     "list_index[0] = \"STRANGER THINGS\"\n",
@@ -136,6 +219,13 @@
     "print(list_index_copia)\n",
     "print(list_index_nueva)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
