--- a/03-Python/01-Basics/02-Practica/Ejercicios_Basics_II_enunciados.ipynb
+++ b/03-Python/01-Basics/02-Practica/Ejercicios_Basics_II_enunciados.ipynb
@@ -259,11 +259,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Usa esta celda para tu respuesta"
+    "A = 4\n",
+    "B = \"Text\"\n",
+    "C = 4.1\n",
+    "\n",
+    "print(A==B)\n",
+    "print(A!=C)\n",
+    "print(A>C)\n",
+    "print(C<=A)\n",
+    "print(B!=C)"
    ]
   },
   {
@@ -285,12 +305,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Usa esta celda para tu respuesta"
+    "input1 = input(\"Introduce el primer valor\")\n",
+    "print(input1)\n",
+    "input2 = input(\"Introduce el segundo valor\")\n",
+    "print(input2)\n",
+    "print(input1 == input2)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -302,11 +341,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1\n",
+      "2\n",
+      "False\n",
+      "False\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Usa esta celda para tu respuesta"
+    "input1 = input(\"Introduce el primer valor\")\n",
+    "print(input1)\n",
+    "input2 = input(\"Introduce el segundo valor\")\n",
+    "print(input2)\n",
+    "input3 = input(\"Introduce el tercer valor\")\n",
+    "print(input3)\n",
+    "print(input1 == input2 == input3)\n",
+    "print(input1 == input2) or (input1 == input3) or (input2 == input3)"
    ]
   },
   {
@@ -384,11 +452,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "17\n",
+      "63.451\n",
+      "74\n"
+     ]
+    }
+   ],
    "source": [
-    "# Usa esta celda para tu respuesta"
+    "lista = [4,6,8,-1]\n",
+    "var1 = 63.451256965\n",
+    "print(max(lista))\n",
+    "print(sum(lista))\n",
+    "print(round(var1,3))\n",
+    "print(abs(-74))"
    ]
   },
   {
@@ -446,11 +530,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LO PRIMERO DE TODO, CÓMO ESTÁN LOS MÁQUINAS\n",
+      "lo primero de todo, cómo están los máquinas\n",
+      "['Lo', 'primero', 'de', 'todo,', 'cómo', 'están', 'los', 'máquinas']\n",
+      "Lo primero de todo; cómo están los máquinas\n",
+      "Lo primero de todo, cómo están los máquins\n"
+     ]
+    }
+   ],
    "source": [
-    "# Usa esta celda para tu respuesta"
+    "mensaje = 'Lo primero de todo, cómo están los máquinas'\n",
+    "\n",
+    "print(mensaje.upper())\n",
+    "print(mensaje.lower())\n",
+    "#print(mensaje.upper())\n",
+    "print(mensaje.split(\" \"))\n",
+    "print(mensaje.replace(\",\",\";\"))\n",
+    "print(mensaje.replace(\"a\", \"\"))\n"
    ]
   },
   {
@@ -477,47 +580,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Usa esta celda para tu respuesta"
+    "lista1 = [1,2,3,4,5,6,7,8,9,10]\n",
+    "\n",
+    "lista1.append(11)\n",
+    "\n",
+    "print(lista1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66\n"
+     ]
+    }
+   ],
    "source": [
-    "# Usa esta celda para tu respuesta"
+    "print(sum(lista1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 5, 6, 7, 8, 9, 10, 11]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Usa esta celda para tu respuesta"
+    "lista1.remove(3)\n",
+    "print(lista1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 5, 15, 6, 7, 8, 9, 10, 11]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Usa esta celda para tu respuesta"
+    "lista1.insert(3,15)\n",
+    "print(lista1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 5, 15, 6, 7, 8, 9, 10, 11, 16, 17, 18, 19]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Usa esta celda para tu respuesta"
+    "lista2 = [16,17,18,19]\n",
+    "\n",
+    "lista3 = lista1 + lista2\n",
+    "\n",
+    "print(lista3)"
    ]
   },
   {
@@ -571,7 +724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.1"
   },
   "nbTranslate": {
    "displayLangs": [
