--- a/03-Python/01-Basics/02-Practica/Extra ejercicios para consolidar y repasar II.ipynb
+++ b/03-Python/01-Basics/02-Practica/Extra ejercicios para consolidar y repasar II.ipynb
@@ -42,6 +42,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "var1 = \"Domingo estudiando en vez de durmiendo\"\n",
+    "var2 = 35\n",
+    "var3 = 2.7172\n",
+    "var4 = not True\n",
+    "var5 = [11,21,22,10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Conversión de tipos o casting:\n",
     "# Intenta convertir todos y cada una de las variables del ejercicio anterior en:\n",
     "# string ej: str(var2), str(var3)...\n",
@@ -51,6 +64,39 @@
     "# lista (¿SE PUEDE HACER ESTO?: tan sencillo como list(varX) sea varX el nombre de tu variable: var1, var2, var3...) ESTO NO HABÍA QUE SABERLO DE MOMENTO \n",
     "# A veces funciona, a veces da error... entiende el output y comprende cuando es normal que salgan errores \n",
     "# ¿Qué sucede cuanto haces list(var1) siendo var1 un string?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(int(var1)) no funciona con strings\n",
+    "print(int(var2))\n",
+    "print(int(var3)) #pierdo los decimales\n",
+    "print(int(var4))\n",
+    "#print(int(var5)) no funciona con listas\n",
+    "\n",
+    "#print(float(var1)) no funciona con strings\n",
+    "print(float(var2)) \n",
+    "print(float(var3))\n",
+    "print(float(var4))\n",
+    "#print(float(var5)) no funciona con listas\n",
+    "\n",
+    "#Todas true porque existen menos la var4 que es False (not True)\n",
+    "print(bool(var1)) \n",
+    "print(bool(var2)) \n",
+    "print(bool(var3))\n",
+    "print(bool(var4))\n",
+    "print(bool(var5))\n",
+    "\n",
+    "#Se crearan todas las listas\n",
+    "print(list(var1)) #los strings son elementos iterables, convierte en linea cada uno de sus caracteres\n",
+    "#print(list(var2)) los int no son iterables\n",
+    "#print(list(var3)) los float no son iterables\n",
+    "3#print(list(var4)) los bool no son iterables\n",
+    "print(list(var5))"
    ]
   },
   {
@@ -86,13 +132,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38\n"
+     ]
+    }
+   ],
    "source": [
     "# Estoy deprimido, quería actualizar mi edad y obtengo 371 en lugar de 38... ¿Qué estoy haciendo mal?\n",
-    "edad_actual = \"37\"\n",
-    "edad_nueva = \"37\" + \"1\"\n",
+    "edad_actual = 37\n",
+    "edad_nueva = 37 + 1\n",
     "print(edad_nueva)"
    ]
   },
@@ -104,39 +158,62 @@
    "source": [
     "# Ejecuta, observa, entiende e incluye comentarios o resuelve usando papel y lápiz, si es necesario:\n",
     "\n",
-    "print(6//2)\n",
-    "print(6/2)\n",
+    "print(6//2) #imprime el resto. R = 0\n",
+    "print(6/2) #imprime el cociente C = 3\n",
     "\n",
-    "print(6//4)\n",
-    "print(6/4)\n",
+    "print(6//4) #R = 2  \n",
+    "print(6/4) #C = 1.5\n",
     "\n",
-    "print(6//5)\n",
-    "print(6/5)"
+    "print(6//5) #R = 1\n",
+    "print(6/5) # C = 1.2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Condiciones\n",
     "# Genera una condición que devuelva verdadero si opcion es postre o cafe. \n",
-    "opcion = \"postre\"\n"
+    "opcion = \"postre\"\n",
+    "\n",
+    "cond1 = opcion == \"postre\"\n",
+    "cond2 = opcion == \"cafe\"\n",
+    "\n",
+    "cond3 = cond1 or cond2\n",
+    "\n",
+    "print(cond3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "## Debugear condiciones \n",
     "# Este codigo NO genera una condición que devuelva verdadero si opcion es postre o cafe.\n",
     "# Haz que funcione!\n",
     "opcion = \"postre\"\n",
     "\n",
-    "cond1 = opcion == \"postre \"\n",
+    "cond1 = opcion == \"postre\"\n",
     "cond2 = opcion == \"Cafe\"\n",
     "cond_final = cond1 or cond2 \n",
     "print(cond_final)"
@@ -150,7 +227,14 @@
    "source": [
     "# Condiciones\n",
     "# Genera una condición que devuelva verdadero si el precio está entre 700 y 800 euros\n",
-    "precio = 750"
+    "precio = 750\n",
+    "\n",
+    "cond1 = precio >=700\n",
+    "cond2 = precio <=800\n",
+    "\n",
+    "cond3 = cond1 and cond2\n",
+    "\n",
+    "print(cond3)"
    ]
   },
   {
@@ -163,10 +247,10 @@
     "# Este codigo NO genera una condición que devuelva verdadero si el precio está entre 7000 y 8000 euros\n",
     "# Es más, ni siquiera se ejecuta\n",
     "# Haz que funcione!\n",
-    "precio = \"7500\"\n",
+    "precio = 7500\n",
     "\n",
-    "cond1 = opcion >= \"7000\"\n",
-    "cond2 = opcion <= 8.000\n",
+    "cond1 = precio >= 7000\n",
+    "cond2 = precio <= 8000\n",
     "cond_final = cond1 and cond2 \n",
     "print(cond_final)\n"
    ]
@@ -185,7 +269,13 @@
     "# Recordemos que puedes contar las apariciones de un elemento en una lista con el método count()\n",
     "lista_ejemplo = [\"A\", \"B\", \"A\", \"C\"]\n",
     "print(lista_ejemplo.count(\"A\"))\n",
-    "# Ahora puedes contar cuantas veces aparece el determinante \"un\", la preposición \"de\" y el nombre \"informática\" en la variable texto! \n"
+    "# Ahora puedes contar cuantas veces aparece el determinante \"un\", la preposición \"de\" y el nombre \"informática\" en la variable texto! \n",
+    "\n",
+    "cuenta_un = texto.count(\"un\")\n",
+    "cuenta_de = texto.count(\"de\")\n",
+    "cuenta_informatica = texto.count(\"informática\")\n",
+    "\n",
+    "print(cuenta_un,cuenta_de,cuenta_informatica)"
    ]
   },
   {
@@ -205,13 +295,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Las', 'computadoras', 'normales', 'solo', '\"entienden\"', 'de', '1', 'y', '0']\n"
+     ]
+    }
+   ],
    "source": [
     "# Debuggea el código\n",
     "texto2 = \"Las computadoras normales solo \\\"entienden\\\" de 1 y 0\" # ¿Te acuerdas de para que servia \\ como en \\\"entienden\\\" ?\n",
-    "lista_corte_1 = texto2.split(1)\n",
+    "lista_corte_1 = texto2.split(\" \")\n",
     "print(lista_corte_1)"
    ]
   },
@@ -234,36 +332,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hola\n"
+     ]
+    }
+   ],
    "source": [
     "# input \n",
-    "# Pide al usuario que introduzca algo por pantalla y guardalo en al variable input1\n"
+    "# Pide al usuario que introduzca algo por pantalla y guardalo en al variable input1\n",
+    "input1 = input (\"Por favor, introduzca el mensaje que quiere enviar\")\n",
+    "print (input1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.5\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "# input \n",
-    "# Pide al usuario que introduzca algo por pantalla y guardalo en al variable input1. Además quiero que aparezca en el rectángulo de arriba, dónde pones los datos, mi mensaje\n",
+    "# Pide al usuario que introduzca algo por pantalla y guardalo en la variable input1. Además quiero que aparezca en el rectángulo de arriba, dónde pones los datos, mi mensaje\n",
     "# Dos celdas más arriba, en la número 16, en la parte de abajo del rectángulo ponía \"Ejemplo para pedir al usuario que introduzca datos\", ahora quiero que ponga el contenido de la variable mensaje\n",
-    "mensaje = \"Introduzca un número real (decimal, flotante)\""
+    "mensaje = \"Introduzca un número real (decimal, flotante)\"\n",
+    "input1 = input(mensaje)\n",
+    "print(input1)\n",
+    "print(type(input1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "5.0\n"
+     ]
+    }
+   ],
    "source": [
     "# input \n",
-    "# Pide al usuario que introduzca algo por pantalla y guardalo en al variable input1. Además quiero que aparezca en el rectángulo de arriba, dónde pones los datos, mi mensaje\n",
+    "# Pide al usuario que introduzca algo por pantalla y guardalo en al variable input1. Además quiero que aparezca en el rectángulo\n",
+    "# de arriba, dónde pones los datos, mi mensaje\n",
     "# ¿De que tipo será input1? Siempre string, str... ahora también quiero que transformes/hagas un cast de input1 a float... por ejemplo float(\"25\") te devuelve 25.0\n",
-    "mensaje = \"Introduzca un número real (decimal, flotante)\""
+    "mensaje = \"Introduzca un número real (decimal, flotante)\"\n",
+    "input2=input(\"Introduzca un número real (decimal, flotante)\")\n",
+    "print(type(input2))\n",
+    "print(float(input2))"
    ]
   },
   {
@@ -327,45 +460,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "# Elevar a una potencia: es curioso que elevar a potencia (**) se encuentre en python \"vainilla\" (básico, built in) pero raíz cuadrada (sqrt) requiera importar desde el paquete math.\n",
-    "# Aunque los computadores sean lógica pura, las personas que crearon los lenguajes para \"hablar\" con los computadores no son seres de pura lógica y... estas cosas pasan!\n",
+    "# Elevar a una potencia: es curioso que elevar a potencia (**) se encuentre en python \"vainilla\" (básico, built in) pero raíz \n",
+    "# cuadrada (sqrt) requiera importar desde el paquete math.\n",
+    "# Aunque los computadores sean lógica pura, las personas que crearon los lenguajes para \"hablar\" con los computadores no son\n",
+    "# seres de pura lógica y... estas cosas pasan!\n",
     "# Vamos a repasar ambos:\n",
-    "# Crea la variable cat1 y asignale el valor input1 ** 2 (de ejercicios anteriores del input, si no te salieron, suponte que input1 vale 3)\n",
-    "# Si introdujiste 3 en input1, el resultado de cat1 debería ser 9 "
+    "# Crea la variable cat1 y asignale el valor input1 ** 2 (de ejercicios anteriores del input, si no te salieron, suponte que \n",
+    "# input1 vale 3)\n",
+    "# Si introdujiste 3 en input1, el resultado de cat1 debería ser 9 \n",
+    "\n",
+    "input3=input(\"Introduzca un numero (int o float)\")\n",
+    "cat1 = int(input3)**2\n",
+    "print(cat1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
    "source": [
-    "# Elevar a una potencia: es curioso que elevar a potencia (**) se encuentre en python \"vainilla\" (básico, built in) pero raíz cuadrada (sqrt) requiera importar desde el paquete math.\n",
-    "# Aunque los computadores sean lógica pura, las personas que crearon los lenguajes para \"hablar\" con los computadores no son seres de pura lógica y... estas cosas pasan!\n",
+    "# Elevar a una potencia: es curioso que elevar a potencia (**) se encuentre en python \"vainilla\" (básico, built in) pero raíz \n",
+    "# cuadrada (sqrt) requiera importar desde el paquete math.\n",
+    "# Aunque los computadores sean lógica pura, las personas que crearon los lenguajes para \"hablar\" con los computadores no son\n",
+    "# seres de pura lógica y... estas cosas pasan!\n",
     "# Vamos a repasar ambos:\n",
-    "# Crea la variable cat2 y asignale el valor input2 ** 2 (de ejercicios anteriores del input, si no te salieron, suponte que input2 vale 4)\n",
-    "# Si introdujiste 4 en input2, el resultado de cat2 debería ser 16 "
+    "# Crea la variable cat2 y asignale el valor input2 ** 2 (de ejercicios anteriores del input, si no te salieron, suponte que\n",
+    "# input2 vale 4)\n",
+    "# Si introdujiste 4 en input2, el resultado de cat2 debería ser 16\n",
+    "input4=input(\"Introduzca un numero (int o float)\")\n",
+    "cat2 = int(input4)**2\n",
+    "print(cat2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
    "source": [
     "# Crea la variable cat_suma que contiene cat1 + cat2\n",
-    "# Si en input1 introdujiste 3, y en input2 introdujiste 4, el resultado debería ser 25"
+    "# Si en input1 introdujiste 3, y en input2 introdujiste 4, el resultado debería ser 25\n",
+    "\n",
+    "cat3 = cat1 + cat2\n",
+    "\n",
+    "print(cat3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Para \"añadir\" nuevas funcionalidades de Python usamos import para traer librerias/paquetes y poder usarlos en nuestro código\n",
     "# Existen varias formas\n",
@@ -373,25 +555,53 @@
     "# from math import sqrt\n",
     "# La primera te trae TODA la libreria math y para usar una función concreta tienes que usar math.funcion, ejemplo math.sqrt(25)\n",
     "# La segunda sola trae la funcionalidad sqrt y puedes usarla directamente sqrt(25)\n",
-    "# Elige una de las dos opciones y prueba a calcular la raíz cuadrada de 36"
+    "# Elige una de las dos opciones y prueba a calcular la raíz cuadrada de 36\n",
+    "\n",
+    "from math import sqrt\n",
+    "\n",
+    "var2 = sqrt(64)\n",
+    "print(var2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Crea la variable hip y asignale el valor de la raiz cuadrada de cat_suma.\n",
-    "# RECUERDA que si ya has importado sqrt en otra celda prevía de ESTE notebook, no tienes que importarla de nuevo. Python se acuerda de que está ahí\n",
-    "# Si input1 introdujiste 3, input2 introdujiste 4, cat_suma debería ser 25 y el resultado de este ejercicio debería ser 5"
+    "# RECUERDA que si ya has importado sqrt en otra celda prevía de ESTE notebook, no tienes que importarla de nuevo.\n",
+    "# Python se acuerda de que está ahí\n",
+    "# Si input1 introdujiste 3, input2 introdujiste 4, cat_suma debería ser 25 y el resultado de este ejercicio debería ser 5\n",
+    "\n",
+    "def hipotenusa (cate1,cate2):\n",
+    "    hip = sqrt((cate1**2)+(cate2**2))\n",
+    "    print(hip)\n",
+    "\n",
+    "hipotenusa(3,4) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "siiiiii\n"
+     ]
+    }
+   ],
    "source": [
     "# Crea un algoritmo que pida la usuario las medidas de dos catetos y calcule la hipotenusa de un triángulo rectángulo\n",
     "# Espera, espera, espera... Si has llegado hasta aquí, y en la anterior celda obtuviste un 5...\n",
@@ -406,6 +616,13 @@
     "res = input(msg)\n",
     "print(res)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -424,7 +641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
