--- a/Ejercicios_más_alla_ramp_up/ejercicios_III.ipynb
+++ b/Ejercicios_más_alla_ramp_up/ejercicios_III.ipynb
@@ -25,24 +25,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m lista_vacia \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m var \u001b[38;5;129;01min\u001b[39;00m lista:\n\u001b[1;32m----> 8\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mvar1\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mvar\u001b[49m\u001b[43m:\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[43m        \u001b[49m\u001b[43mlista_vacia\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvar1\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m (lista_vacia)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
+     ]
+    }
+   ],
    "source": [
     "# Aplanar una lista: si tengo la lista anidada [1, [2,3], 4, 5, 6, [7, 8,9]] quiero terminar con la lista [1,2,3,4,5,6,7,8,9]\n",
     "# Si he hecho esto 7 veces en mi vida, 7 veces he tenido que buscar en internet (no chatgpt) como hacerlo. \n",
     "# Haz tu lo mismo, busca una solución y usarla. \n",
-    "# ESTO ES PARA IR EMPEZANDO A APRENDER A BUSCAR EN INTERNET, NO ES DE RAMP UP. "
+    "# ESTO ES PARA IR EMPEZANDO A APRENDER A BUSCAR EN INTERNET, NO ES DE RAMP UP. \n",
+    "lista = [1, [2,3], 4, 5, 6, [7, 8,9]]\n",
+    "lista_vacia = []\n",
+    "for var in lista:\n",
+    "    for var1 in var:\n",
+    "        lista_vacia.append(var1)\n",
+    "print (lista_vacia)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'list' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m lista \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m, [\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m], \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m6\u001b[39m, [\u001b[38;5;241m7\u001b[39m, \u001b[38;5;241m8\u001b[39m,\u001b[38;5;241m9\u001b[39m]]\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mitertools\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m chain\n\u001b[1;32m----> 4\u001b[0m lista_blanca \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mchain\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_iterable\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlista\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(lista_blanca)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [1, [2,3], 4, 5, 6, [7, 8,9]]\n",
+    "from itertools import chain\n",
+    "\n",
+    "lista_blanca = list(chain.from_iterable(lista))\n",
+    "print(lista_blanca)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'list' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m      7\u001b[0m         \u001b[38;5;28;01myield\u001b[39;00m obj\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43maplanar\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlista\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [1, [2,3], 4, 5, 6, [7, 8,9]]\n",
+    "def aplanar(obj):\n",
+    "    if isinstance(obj, list):\n",
+    "        for item in obj:\n",
+    "            yield from aplanar(item)\n",
+    "    else:\n",
+    "        yield obj\n",
+    "\n",
+    "print(list(aplanar(lista)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+ 4,6\n"
+     ]
+    }
+   ],
    "source": [
     "# La notación polaca:\n",
-    "# Vimos en clase, al hablar de los paréntesis, que un matemático polaco propuso una notación para las operaciones sencillas (+,-,*...) que se pareciera más a las funciones más complejas: \n",
+    "# Vimos en clase, al hablar de los paréntesis, que un matemático polaco propuso una notación para las operaciones sencillas (+,-,*...) \n",
+    "# que se pareciera más a las funciones más complejas: \n",
     "# func_name(arg1,arg2)\n",
     "# Si pol = \"+ 4,6\".. ¿eres capaz de implementar la notación polaca?\n",
     "# pol es un string\n",
@@ -50,7 +131,10 @@
     "# El segundo elemento de pol es siempre un espacio\n",
     "# El tercer elemento de pol es siempre el primer operando y siempre tiene un solo digito\n",
     "# El cuarto elemento de pol es siempre el segundo operando y siempre tiene un solo digito\n",
-    "# \"+ 4,6\" sería 10, \"- 4,6\" sería -2 y \"* 4,6\" sería 24\n"
+    "# \"+ 4,6\" sería 10, \"- 4,6\" sería -2 y \"* 4,6\" sería 24\n",
+    "\n",
+    "pol = \"+ 4,6\"\n",
+    "print(pol)"
    ]
   },
   {
@@ -81,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
