Se añaden ejercicios funciones

--- a/03-Python/03-Colecciones/Ejercicios Colecciones_enunciados.ipynb
+++ b/03-Python/03-Colecciones/Ejercicios Colecciones_enunciados.ipynb
@@ -30,6 +30,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista = [\"Andres\", \"Paula\", \"Maria\"]\n",
+    "\n",
+    "for nombre in lista:\n",
+    "    print(nombre)\n",
+    "\n",
+    "lista.sort()\n",
+    "print(lista) \n",
+    "#lista.sort(reverse = True)\n",
+    "#print(lista)\n",
+    "\n",
+    "print(lista[0])\n",
+    "\n",
+    "lista.remove(\"Maria\")\n",
+    "print(lista)\n",
+    "\n",
+    "lista.insert(int(len(lista)/2) ,\"Patricia\")\n",
+    "print(lista)\n",
+    "\n",
+    "#lista.extend(\"Sergio\")\n",
+    "#print(lista)\n",
+    "\n",
+    "#Si quiero añadir mas de un elemento a la lista?"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -48,6 +78,26 @@
     "         \n",
     " </td></tr>\n",
     "</table>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tupla = (21,)\n",
+    "print(type(tupla))\n",
+    "tupla1 = (11,10,22)\n",
+    "\n",
+    "tupla2 = tupla + tupla1\n",
+    "print(tupla2)\n",
+    "\n",
+    "tupla3 = (tupla2[0],tupla2[1])\n",
+    "print(tupla3)\n",
+    "\n",
+    "tupla4 = (tupla2[:2])\n",
+    "print(tupla4)"
    ]
   },
   {
@@ -72,6 +122,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "char = {\"tamaño\": 32,\"smarttv\": True, \"marca\": \"Sony\"}\n",
+    "\n",
+    "char [\"color\"] = \"Negro\"\n",
+    "\n",
+    "print(char)\n",
+    "\n",
+    "char ['tamaño'] = 55\n",
+    "\n",
+    "print(char)\n",
+    "\n",
+    "print(char.keys())\n",
+    "print(char.values())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -86,6 +156,17 @@
     "         \n",
     " </td></tr>\n",
     "</table>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temperaturas = [25.2, 24.9, 25.2, 26.7, 28.6, 29.5, 29.7]\n",
+    "mild = [x for x in temperaturas if x < 27]\n",
+    "print(mild)"
    ]
   },
   {
@@ -105,7 +186,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ejer_1 = [1,2,3,4,5]\n",
+    "\n",
+    "ejer_1.reverse()\n",
+    "\n",
+    "print(ejer_1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -121,7 +208,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ejer_2 = [1,2,3,4,5]\n",
+    "\n",
+    "cuadrados = [x**2 for x in ejer_2]\n",
+    "print(cuadrados)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -143,7 +235,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#olas del mar boscoso, olas del mar ancestral, olas que vienen, holas que tal\n",
+    "\n",
+    "ejer_3_1 = [\"Hola\", \"amigo\"]\n",
+    "ejer_3_2 = [\"Que\", \"tal\"]\n",
+    "\n",
+    "lista = [x + ' ' + y for x in ejer_3_1 for y in ejer_3_2]\n",
+    "print(lista)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -159,7 +260,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ejer_4 = [20, 47, 19, 29, 45, 67, 78, 90]\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 47, 19, 29, 0, 67, 78, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for w in ejer_4:\n",
+    "    if w == 45:\n",
+    "        i = ejer_4.index(45)\n",
+    "        ejer_4[i] = 0\n",
+    "print(ejer_4)    \n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,6 +297,27 @@
     "> ```ejer_5 = [3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3]```\n",
     "\n",
     "TIP: No intentes eliminar elementos sobre la lista que estás iterando. Haz una copia con `ejer_5.copy()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 47, 19, 29, 45, 67, 78, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_5 = [3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3]\n",
+    "lista_copia = ejer_5.copy()\n",
+    "\n",
+    "sin_tres = [(var) for var in lista_copia if var != 3]\n",
+    "print(sin_tres)"
    ]
   },
   {
@@ -218,10 +366,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 202,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "Sabado ['Hector', 'Alberto', 'duermen']\n",
+      "****************************************************************************************************\n",
+      "['Sabado', 17, 8.2, ['Hector', 'Alberto', 'duermen'], 'todavia']\n"
+     ]
+    }
+   ],
+   "source": [
+    "tup = (16,18,21)\n",
+    "tup2 = (27,)\n",
+    "print(type(tup2))\n",
+    "tup3 = (\"Sabado\", 17, 8.20, [\"Hector\", \"Alberto\", \"duermen\"])\n",
+    "print(tup3[0],tup3[len(tup3)-1])\n",
+    "print('*'*100)\n",
+    "tup4=list(tup3)\n",
+    "tup4.append(\"todavia\")\n",
+    "print(tup4)\n",
+    "tup4.remove(8.20)\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -239,7 +411,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ejer_7 = (\"cien\", \"cañones\", \"por\", \"banda\")\n",
+    "\n",
+    "string = \" \".join(ejer_7)\n",
+    "print(string)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -255,7 +432,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ejer_8 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3)\n",
+    "print(ejer_8[2],ejer_8[-3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -270,10 +450,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 188,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "(3, 29, 45, 67, 78)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "print(ejer_9.count(3))\n",
+    "nueva = tuple(ejer_9[5:10])\n",
+    "print(nueva)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -288,7 +482,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(60 in ejer_9)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -305,7 +501,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "lista2 = list(ejer_9)\n",
+    "print(lista2)\n",
+    "\n",
+    "set = set(ejer_9)\n",
+    "print(set)\n",
+    "\n",
+    "\n",
+    "     \n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
@@ -368,10 +576,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 252,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 5, 8]\n",
+      "[234, 98, 78, 29]\n",
+      "{4: 78, 2: 98, 8: 234, 5: 29, 7: 65}\n",
+      "dict_keys([4, 2, 8, 5, 7])\n",
+      "4 78\n",
+      "2 98\n",
+      "8 234\n",
+      "5 29\n",
+      "7 65\n",
+      "dict_keys([4, 2, 8, 5, 7]) dict_values([78, 98, 234, 29, 65])\n",
+      "dict_keys([4, 2, 8, 5, 7]) dict_values([78, 98, 234, 29, 65])\n",
+      "dict_keys([4, 2, 8, 5, 7]) dict_values([78, 98, 234, 29, 65])\n",
+      "dict_keys([4, 2, 8, 5, 7]) dict_values([78, 98, 234, 29, 65])\n",
+      "dict_keys([4, 2, 8, 5, 7]) dict_values([78, 98, 234, 29, 65])\n",
+      "4 78\n",
+      "2 98\n",
+      "8 234\n",
+      "5 29\n",
+      "7 65\n",
+      "****************************************************************************************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_13 = {4:78, 2:98, 8:234, 5:29}\n",
+    "lista_asc = list(ejer_13.keys())\n",
+    "lista_asc.sort()\n",
+    "print(lista_asc)\n",
+    "\n",
+    "lista_des = list(ejer_13.values())\n",
+    "lista_des.sort(reverse=True)\n",
+    "print(lista_des)\n",
+    "\n",
+    "ejer_13[7]=65\n",
+    "print(ejer_13)\n",
+    "\n",
+    "ejer_13.get(2)\n",
+    "\n",
+    "claves = ejer_13.keys()\n",
+    "print(claves)\n",
+    "\n",
+    "for key in ejer_13:\n",
+    "    print(key, ejer_13.get(key))\n",
+    "\n",
+    "for elemento in ejer_13:\n",
+    "    print(ejer_13.keys(), ejer_13.values())\n",
+    "\n",
+    "for key, value in ejer_13.items():\n",
+    "    print(key, value)\n",
+    "\n",
+    "print('*'*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "cannot unpack non-iterable int object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[241], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m claves, valores \u001b[38;5;129;01min\u001b[39;00m ejer_13:\n\u001b[0;32m      2\u001b[0m     claves \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(ejer_13\u001b[38;5;241m.\u001b[39mkeys())\n\u001b[0;32m      3\u001b[0m     valores \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(ejer_13\u001b[38;5;241m.\u001b[39mvalues())\n",
+      "\u001b[1;31mTypeError\u001b[0m: cannot unpack non-iterable int object"
+     ]
+    }
+   ],
+   "source": [
+    "for claves, valores in ejer_13:\n",
+    "    claves = list(ejer_13.keys())\n",
+    "    valores = list(ejer_13.values())\n",
+    "    print(claves, '-', values)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -389,7 +676,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ejer_14_1 = {1: 11, 2: 22}\n",
+    "ejer_14_2 = {3: 33, 4: 44}\n",
+    "\n",
+    "ejer_14_1.update(ejer_14_2)\n",
+    "\n",
+    "print(ejer_14_1)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -402,10 +696,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "165\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_15 = {1: 11, 2: 22, 3: 33, 4: 44, 5: 55}\n",
+    "total = sum(ejer_15.values())\n",
+    "print(total)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -418,10 +724,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 231,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19326120\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_16 = {1: 11, 2: 22, 3: 33, 4: 44, 5: 55}\n",
+    "\n",
+    "valores= list(ejer_16.values())\n",
+    "from math import prod\n",
+    "resultado = prod(valores)\n",
+    "print(resultado)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -436,10 +758,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 236,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{10, 11, 21, 22}\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "25",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[236], line 8\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(set1)\n\u001b[0;32m      6\u001b[0m set1\u001b[38;5;241m.\u001b[39mremove(\u001b[38;5;241m22\u001b[39m)\n\u001b[1;32m----> 8\u001b[0m \u001b[43mset1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m25\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m set1\u001b[38;5;241m.\u001b[39mdiscard(\u001b[38;5;241m10\u001b[39m)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(set1)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 25"
+     ]
+    }
+   ],
    "source": [
+    "set1 = {11,10,21}\n",
+    "\n",
+    "set1.add(22)\n",
+    "print(set1)\n",
+    "\n",
+    "set1.remove(22)\n",
+    "\n",
+    "set1.discard(10)\n",
+    "print(set1)\n",
+    "\n",
     "\n"
    ]
   },
@@ -467,7 +818,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
